objects/LLC_BI__Risk_Grade_Group__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Group_Number__c</fullName>
        <description>This field is optional. It is populated manually by the user. This field controls the sort order for risk grade groups in the risk grade worksheet.</description>
        <label>Group Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Risk_Grade_Template__c</fullName>
        <description>This field is required. It is populated automatically when creating a grisk grade group from a risk grade template.  This field specifies the risk grade template associated with the risk grade group.</description>
        <label>Risk Grade Template</label>
        <referenceTo>LLC_BI__Risk_Grade_Template__c</referenceTo>
        <relationshipLabel>Risk Grade Groups</relationshipLabel>
        <relationshipName>Risk_Grade_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Weight__c</fullName>
        <description>This field is required. It must be manually populated with a percentage number lower than 1 (such as .25) if there are multiple groups or with a percentage number equal to 1 if there is only one group. It is used to determine how much a particular group of risk grade factors contributes to the calculated risk grade. The weight across all risk grade groups for a risk grade template should not exceed 1.</description>
        <label>Weight</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Risk Grade Group</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Risk Grade Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Grade Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>